# sylvorg.github.io

./: .gitignore  CNAME  README.html  README.md  README.org  RESUME.html  RESUME.org  flake.nix  index.html  index.hy  index.nix  makefile  nix.org  pyproject.toml  titan.json  valiant.yaml
